Added Siedel method

--- a/IterationsLinearSystems/InterationsLinearSystems.ipynb
+++ b/IterationsLinearSystems/InterationsLinearSystems.ipynb
@@ -9,12 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from numpy.linalg import solve, inv, norm, eig"
+    "from numpy.linalg import solve, inv, norm, eig\n",
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -26,23 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def residual(A, b, x):\n",
-    "    \"\"\"Calculating solution error.\n",
-    "\n",
-    "    Returns:\n",
-    "        res_ver (ndarray): b - Ax\n",
-    "    \"\"\"\n",
-    "    res_vec = b - np.dot(A, x)\n",
-    "    return res_vec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,15 +102,12 @@
     "        for k in range(i - 1, -1, -1):\n",
     "            Ab[k][n] -= Ab[k][i] * x[i]\n",
     "\n",
-    "    # Calculating error.\n",
-    "    res_vec = residual(A, b, x)\n",
-    "\n",
     "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,20 +169,20 @@
     "    verboseprint(\"\\ng_D: \\n{}\".format(g_D))\n",
     "\n",
     "    H_D_norm = norm(H_D, np.inf)\n",
-    "    verboseprint(\"\\n||H_D||_inf: {}\".format(H_D_norm))\n",
+    "    verboseprint(\"\\n||H_D||_inf: \\n{}\".format(H_D_norm))\n",
     "\n",
     "    return H_D, g_D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def apriori_iterations_estimation(H, g, verbose=True, eps=1e-5, x_0=[[0.],\n",
-    "                                                          [0.],\n",
-    "                                                          [0.]]):\n",
+    "                                                                     [0.],\n",
+    "                                                                     [0.]]):\n",
     "    \"\"\"Apriori estimating number of iterations.\n",
     "\n",
     "    Find such k, that difference between\n",
@@ -217,7 +200,7 @@
     "\n",
     "    verboseprint = print if verbose else lambda *a, **k: None\n",
     "\n",
-    "    k = 0\n",
+    "    k = 1\n",
     "    while True:\n",
     "        error = (norm(H, np.inf)**k) * norm(x_0, np.inf) + \\\n",
     "                (norm(H, np.inf)**k) * norm(g, np.inf) / \\\n",
@@ -226,14 +209,14 @@
     "            break\n",
     "        k += 1\n",
     "\n",
-    "    verboseprint(\"\\nEstimated number of iterations: {}\".format(k))\n",
+    "    verboseprint(\"\\nEstimated number of iterations: \\n{}\".format(k))\n",
     "\n",
     "    return k"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,11 +274,11 @@
     "\n",
     "    H, g = iterations_prepare(A, b, verbose=False)\n",
     "\n",
-    "    k = 0\n",
+    "    k = 1\n",
     "    x = x_0\n",
     "    while norm(x_solution - x, np.inf) > eps:\n",
     "        x_0 = x\n",
-    "        x = np.dot(H, x_0) + g\n",
+    "        x = iterations_method(A, b, k, verbose=False)\n",
     "        k += 1\n",
     "\n",
     "    error = norm(x_solution - x, np.inf)\n",
@@ -313,13 +296,13 @@
     "    lusternik_error = norm(x_solution - lusternik_solution, np.inf)\n",
     "    \n",
     "    verboseprint(\"\\nSolution: \\n{}\".format(x))\n",
-    "    verboseprint(\"\\nError: \\n{}\".format(error))\n",
     "    verboseprint(\"\\nNumber of iterations to reach given error rate: \\n{}\".format(k))\n",
-    "    verboseprint(\"\\nAposterior value: \\n{}\".format(aprior_error))\n",
-    "    verboseprint(\"\\nPosterior value: \\n{}\".format(prior_error))\n",
+    "    verboseprint(\"\\nAposterior error: \\n{}\".format(aprior_error))\n",
+    "    verboseprint(\"\\nPosterior error: \\n{}\".format(prior_error))\n",
+    "    verboseprint(\"\\nError: \\n{}\".format(error))\n",
     "    verboseprint(\"\\nLusternik error: \\n{}\".format(lusternik_error))\n",
     "\n",
-    "    pass"
+    "    return [k, error, lusternik_error]"
    ]
   },
   {
@@ -331,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -364,9 +347,11 @@
       " [0.        ]\n",
       " [0.        ]]\n",
       "\n",
-      "||H_D||_inf: 0.6316047860102488\n",
+      "||H_D||_inf: \n",
+      "0.6316047860102488\n",
       "\n",
-      "Estimated number of iterations: 23\n"
+      "Estimated number of iterations: \n",
+      "23\n"
      ]
     }
    ],
@@ -384,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -397,17 +382,17 @@
       " [-0.03511201]\n",
       " [ 0.09031434]]\n",
       "\n",
+      "Number of iterations to reach given error rate: \n",
+      "14\n",
+      "\n",
+      "Aposterior error: \n",
+      "0.0008638344045932408\n",
+      "\n",
+      "Posterior error: \n",
+      "1.1857412019449837e-05\n",
+      "\n",
       "Error: \n",
       "6.682709230584893e-06\n",
-      "\n",
-      "Number of iterations to reach given error rate: \n",
-      "13\n",
-      "\n",
-      "Aposterior value: \n",
-      "0.00136768185379017\n",
-      "\n",
-      "Posterior value: \n",
-      "1.1857412019449837e-05\n",
       "\n",
       "Lusternik error: \n",
       "1.6312125191431104e-06\n"
@@ -415,7 +400,298 @@
     }
    ],
    "source": [
-    "iterations_method_stats(A, b, gauss_solution)"
+    "iteration_result = iterations_method_stats(A, b, gauss_solution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Seidel method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def seidel_method(A, b, k, verbose=True, x_0=[[0.],\n",
+    "                                              [0.],\n",
+    "                                              [0.]]):\n",
+    "    \"\"\"Solving linear system using seidel method.\n",
+    "\n",
+    "    Args:\n",
+    "        A (ndarray<ndarray, ndarray>): matrix of coefficents.\n",
+    "        b (ndarray): vector of values.\n",
+    "        k (int): number of iterations.\n",
+    "        x_0 (ndarray<ndarray, ndarray>): starting vector.\n",
+    "\n",
+    "    Returns:\n",
+    "        x (ndarray): solution.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    verboseprint = print if verbose else lambda *a, **k: None\n",
+    "\n",
+    "    H, g = iterations_prepare(A, b, verbose=verbose)\n",
+    "\n",
+    "    H_L = np.tril(H, -1)\n",
+    "    H_R = np.triu(H)\n",
+    "    \n",
+    "    verboseprint(\"\\nH_L: \\n{}\".format(H_L))\n",
+    "    verboseprint(\"\\nH_R: \\n{}\".format(H_R))\n",
+    "    \n",
+    "    identity = np.identity(A.shape[0])\n",
+    "    for i in range(k):\n",
+    "        x = np.dot(inv(identity - H_L), np.dot(H_R, x_0)) + \\\n",
+    "            np.dot(inv(identity - H_L), g)\n",
+    "        x_0 = x\n",
+    "\n",
+    "    verboseprint(\"\\nSeidel method solution: \\n{}\".format(x))\n",
+    "\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def seidel_method_stats(A, b, x_solution, eps=1e-5, verbose=True, x_0=[[0.],\n",
+    "                                                                       [0.],\n",
+    "                                                                       [0.]]):\n",
+    "    \"\"\"Printing stats about seidel method.\n",
+    "\n",
+    "    Args:\n",
+    "        A (ndarray<ndarray, ndarray>): matrix of coefficents.\n",
+    "        b (ndarray): vector of values.\n",
+    "        x_solution (ndarray): actual solution.\n",
+    "        eps (float): solution error rate.\n",
+    "        x_0 (ndarray<ndarray, ndarray>): starting vector.\n",
+    "\n",
+    "    Returns:\n",
+    "        k (int): number of iterations to hit eps error.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    verboseprint = print if verbose else lambda *a, **k: None\n",
+    "\n",
+    "    H, g = iterations_prepare(A, b, verbose=False)\n",
+    "\n",
+    "    H_L = np.tril(H, -1)\n",
+    "    H_R = np.triu(H)\n",
+    "    \n",
+    "    identity = np.identity(A.shape[0])\n",
+    "    \n",
+    "    k = 1\n",
+    "    x = x_0\n",
+    "    while norm(x_solution - x, np.inf) > eps:\n",
+    "        x_0 = x\n",
+    "        x = seidel_method(A, b, k, verbose=False)\n",
+    "        k += 1\n",
+    "\n",
+    "\n",
+    "    error = norm(x_solution - x, np.inf)\n",
+    "    \n",
+    "    # Stats for lusternik solution.\n",
+    "    w, _ = eig(np.dot(inv(identity - H_L), H_R))\n",
+    "    r = np.max(w)\n",
+    "    lusternik_solution = x_0 + (x - x_0) / (1 - r)\n",
+    "    lusternik_error = norm(x_solution - lusternik_solution, np.inf)\n",
+    "    \n",
+    "    verboseprint(\"\\nSolution: \\n{}\".format(x))\n",
+    "    verboseprint(\"\\nNumber of iterations to reach given error rate: \\n{}\".format(k))\n",
+    "    verboseprint(\"\\nError: \\n{}\".format(error))\n",
+    "    verboseprint(\"\\nLusternik error: \\n{}\".format(lusternik_error))\n",
+    "\n",
+    "    return [k, float(error), lusternik_error]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finding solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Solution: \n",
+      "[[ 0.16810058]\n",
+      " [-0.03511352]\n",
+      " [ 0.09031892]]\n",
+      "\n",
+      "Number of iterations to reach given error rate: \n",
+      "8\n",
+      "\n",
+      "Error: \n",
+      "3.7638519359839417e-06\n",
+      "\n",
+      "Lusternik error: \n",
+      "2.5320162633235554e-12\n"
+     ]
+    }
+   ],
+   "source": [
+    "siedel_result = seidel_method_stats(A, b, gauss_solution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Successive over-relaxation method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Methods comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.display.float_format = '{:.2e}'.format\n",
+    "\n",
+    "columns = ['Method', 'Iterations', 'Error', 'Lusternik error']\n",
+    "results = pd.DataFrame(columns=columns)\n",
+    "\n",
+    "results.loc[len(results)] = ['Iterations', *iteration_result]\n",
+    "results.loc[len(results)] = ['Siedel', *siedel_result]\n",
+    "\n",
+    "results.set_index('Method', inplace=True)\n",
+    "results = results.astype({'Error': 'float', 'Lusternik error': 'float'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Iterations</th>\n",
+       "      <th>Error</th>\n",
+       "      <th>Lusternik error</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Method</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Iterations</th>\n",
+       "      <td>14</td>\n",
+       "      <td>6.68e-06</td>\n",
+       "      <td>1.63e-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Siedel</th>\n",
+       "      <td>8</td>\n",
+       "      <td>3.76e-06</td>\n",
+       "      <td>2.53e-12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Iterations    Error  Lusternik error\n",
+       "Method                                         \n",
+       "Iterations         14 6.68e-06         1.63e-06\n",
+       "Siedel              8 3.76e-06         2.53e-12"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting package metadata (current_repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "\n",
+      "==> WARNING: A newer version of conda exists. <==\n",
+      "  current version: 4.7.12\n",
+      "  latest version: 4.8.3\n",
+      "\n",
+      "Please update conda by running\n",
+      "\n",
+      "    $ conda update -n base -c defaults conda\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Package Plan ##\n",
+      "\n",
+      "  environment location: /home/furiousteabag/anaconda3/envs/comp\n",
+      "\n",
+      "  added / updated specs:\n",
+      "    - autopep8\n",
+      "\n",
+      "\n",
+      "The following NEW packages will be INSTALLED:\n",
+      "\n",
+      "  autopep8           pkgs/main/noarch::autopep8-1.4.4-py_0\n",
+      "  pycodestyle        pkgs/main/linux-64::pycodestyle-2.5.0-py38_0\n",
+      "\n",
+      "\n",
+      "Preparing transaction: done\n",
+      "Verifying transaction: done\n",
+      "Executing transaction: done\n",
+      "\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "conda install autopep8"
    ]
   },
   {
@@ -432,6 +708,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.2"
   },
   "toc": {
    "base_numbering": 1,
