--- a/IterationsLinearSystems/IterationsLinearSystems.ipynb
+++ b/IterationsLinearSystems/IterationsLinearSystems.ipynb
@@ -274,12 +274,12 @@
     "\n",
     "    H, g = iterations_prepare(A, b, verbose=False)\n",
     "\n",
-    "    k = 1\n",
+    "    k = 0\n",
     "    x = x_0\n",
     "    while norm(x_solution - x, np.inf) > eps:\n",
+    "        k += 1\n",
     "        x_0 = x\n",
     "        x = iterations_method(A, b, k, verbose=False)\n",
-    "        k += 1\n",
     "\n",
     "    error = norm(x_solution - x, np.inf)\n",
     "    aprior_error = (norm(H, np.inf)**k) * norm(x_0, np.inf) + \\\n",
@@ -383,10 +383,10 @@
       " [ 0.09031434]]\n",
       "\n",
       "Number of iterations to reach given error rate: \n",
-      "14\n",
+      "13\n",
       "\n",
       "Aposterior error: \n",
-      "0.0008638344045932408\n",
+      "0.00136768185379017\n",
       "\n",
       "Posterior error: \n",
       "1.1857412019449837e-05\n",
@@ -483,12 +483,12 @@
     "    \n",
     "    identity = np.identity(A.shape[0])\n",
     "    \n",
-    "    k = 1\n",
+    "    k = 0\n",
     "    x = x_0\n",
     "    while norm(x_solution - x, np.inf) > eps:\n",
+    "        k += 1\n",
     "        x_0 = x\n",
     "        x = seidel_method(A, b, k, verbose=False)\n",
-    "        k += 1\n",
     "\n",
     "\n",
     "    error = norm(x_solution - x, np.inf)\n",
@@ -530,7 +530,7 @@
       " [ 0.09031892]]\n",
       "\n",
       "Number of iterations to reach given error rate: \n",
-      "8\n",
+      "7\n",
       "\n",
       "Error: \n",
       "3.7638519359839417e-06\n",
@@ -552,6 +552,133 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def SOR(A, b, k, verbose=True, x_0=[[0.],\n",
+    "                                    [0.],\n",
+    "                                    [0.]]):\n",
+    "    \"\"\"Solving linear system using SOR method.\n",
+    "\n",
+    "    Args:\n",
+    "        A (ndarray<ndarray, ndarray>): matrix of coefficents.\n",
+    "        b (ndarray): vector of values.\n",
+    "        k (int): number of iterations.\n",
+    "        x_0 (ndarray<ndarray, ndarray>): starting vector.\n",
+    "\n",
+    "    Returns:\n",
+    "        x (ndarray): solution.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    verboseprint = print if verbose else lambda *a, **k: None\n",
+    "\n",
+    "    H, g = iterations_prepare(A, b, verbose=verbose)\n",
+    "\n",
+    "    w, _ = eig(H)\n",
+    "    r = np.max(w)\n",
+    "    q = 2 / (1 + np.sqrt(1 - r**2))\n",
+    "\n",
+    "    x = x_0 \n",
+    "    for i in range(k):\n",
+    "        for j in range(len(x_0)):\n",
+    "            \n",
+    "            sum1 = 0\n",
+    "            for f in range(j):\n",
+    "                sum1 += H[j][f] * x[f][0]\n",
+    "                \n",
+    "            sum2 = 0\n",
+    "            for f in range(j+1, len(x_0)):\n",
+    "                sum2 += H[j][f] * x_0[f][0]\n",
+    "                \n",
+    "            x[j][0] = x_0[j][0] + q * (sum1 + sum2 - x_0[j][0] + g[j][0])\n",
+    "            \n",
+    "        x_0 = x\n",
+    "        \n",
+    "    x = np.array(x)\n",
+    "    verboseprint(\"\\nSor method solution: \\n{}\".format(x))\n",
+    "\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sor_method_stats(A, b, x_solution, eps=1e-5, verbose=True, x_0=[[0.],\n",
+    "                                                                    [0.],\n",
+    "                                                                    [0.]]):\n",
+    "    \"\"\"Printing stats about sor method.\n",
+    "\n",
+    "    Args:\n",
+    "        A (ndarray<ndarray, ndarray>): matrix of coefficents.\n",
+    "        b (ndarray): vector of values.\n",
+    "        x_solution (ndarray): actual solution.\n",
+    "        eps (float): solution error rate.\n",
+    "        x_0 (ndarray<ndarray, ndarray>): starting vector.\n",
+    "\n",
+    "    Returns:\n",
+    "        k (int): number of iterations to hit eps error.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    verboseprint = print if verbose else lambda *a, **k: None\n",
+    "\n",
+    "    H, g = iterations_prepare(A, b, verbose=False)\n",
+    "\n",
+    "    k = 0\n",
+    "    x = x_0\n",
+    "    while norm(x_solution - x, np.inf) > eps:\n",
+    "        k += 1\n",
+    "        x_0 = x\n",
+    "        x = SOR(A, b, k, verbose=False)\n",
+    "\n",
+    "    error = norm(x_solution - x, np.inf)\n",
+    "    \n",
+    "    verboseprint(\"\\nSolution: \\n{}\".format(x))\n",
+    "    verboseprint(\"\\nNumber of iterations to reach given error rate: \\n{}\".format(k))\n",
+    "    verboseprint(\"\\nError: \\n{}\".format(error))\n",
+    "\n",
+    "    return [k, float(error), None]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finding solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Solution: \n",
+      "[[ 0.16810401]\n",
+      " [-0.03511492]\n",
+      " [ 0.0903209 ]]\n",
+      "\n",
+      "Number of iterations to reach given error rate: \n",
+      "3\n",
+      "\n",
+      "Error: \n",
+      "3.367252201513793e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "sor_result = sor_method_stats(A, b, gauss_solution)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -560,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,6 +698,7 @@
     "\n",
     "results.loc[len(results)] = ['Iterations', *iteration_result]\n",
     "results.loc[len(results)] = ['Siedel', *siedel_result]\n",
+    "results.loc[len(results)] = ['SOR', *sor_result]\n",
     "\n",
     "results.set_index('Method', inplace=True)\n",
     "results = results.astype({'Error': 'float', 'Lusternik error': 'float'})"
@@ -578,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -616,15 +744,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Iterations</th>\n",
-       "      <td>14</td>\n",
+       "      <td>13</td>\n",
        "      <td>6.68e-06</td>\n",
        "      <td>1.63e-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Siedel</th>\n",
-       "      <td>8</td>\n",
+       "      <td>7</td>\n",
        "      <td>3.76e-06</td>\n",
        "      <td>2.53e-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOR</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3.37e-07</td>\n",
+       "      <td>nan</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -633,8 +767,9 @@
       "text/plain": [
        "           Iterations    Error  Lusternik error\n",
        "Method                                         \n",
-       "Iterations         14 6.68e-06         1.63e-06\n",
-       "Siedel              8 3.76e-06         2.53e-12"
+       "Iterations         13 6.68e-06         1.63e-06\n",
+       "Siedel              7 3.76e-06         2.53e-12\n",
+       "SOR                 3 3.37e-07              nan"
       ]
      },
      "metadata": {},
