--- a/EigenvalueEigenvector/EigenvalueEigenvector.ipynb
+++ b/EigenvalueEigenvector/EigenvalueEigenvector.ipynb
@@ -267,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Power iterations method."
+    "# Power iterations method"
    ]
   },
   {
@@ -290,17 +290,15 @@
     "    n = A.shape[0]\n",
     "\n",
     "    v = np.ones(n) / np.sqrt(n)\n",
-    "    ev = eigenvalue_find(A, v)\n",
     "\n",
     "    for i in range(k):\n",
     "\n",
-    "        Av = A.dot(v)\n",
-    "\n",
+    "        Av = np.dot(A, v)\n",
     "        v_new = Av / np.linalg.norm(Av)\n",
+    "        \n",
     "        ev_new = eigenvalue_find(A, v_new)\n",
     "\n",
     "        v = v_new\n",
-    "        ev = ev_new\n",
     "\n",
     "    return ev_new, v_new"
    ]
@@ -374,6 +372,129 @@
     "\n",
     "k, error = power_iteration_stats(A, eigenvalue)\n",
     "dominant_eigenvalue, dominant_eigenvector = power_iteration(A, k)\n",
+    "\n",
+    "print(\"\\nDominant eigenvalue: \\n{}\".format(dominant_eigenvalue))\n",
+    "print(\"\\nDominant eigenvector: \\n{}\".format(dominant_eigenvector))\n",
+    "print(\"\\nNumber of iterations to reach given aposterior error: \\n{}\".format(k))\n",
+    "print(\"\\nResult error: \\n{}\".format(error))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scalar product method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scalar_product(A, k):\n",
+    "    \"\"\"Calculating dominant eigenvalue and eigenvector using scalar product method. \n",
+    "    \n",
+    "    Args:\n",
+    "        A (ndarray<ndarray, ndarray>): matrix to handle.\n",
+    "        k (int): number of iterations.\n",
+    "        \n",
+    "    Returns:\n",
+    "        ev_new (float): dominant eigenvalue. \n",
+    "        v_new (ndarray<float>): dominant eigenvector. \n",
+    "    \"\"\"\n",
+    "    n = A.shape[0]\n",
+    "\n",
+    "    v = np.ones(n) / np.sqrt(n)\n",
+    "    h = np.ones(n) / np.sqrt(n)\n",
+    "\n",
+    "    for i in range(k):\n",
+    "\n",
+    "        v_new = np.dot(A, v)\n",
+    "        v_new = v_new / norm(v_new)\n",
+    "        \n",
+    "        h_new = np.dot(A.T, h) \n",
+    "        h_new = h_new / norm(h_new)\n",
+    "        \n",
+    "        \n",
+    "        ev_new = (np.dot(np.dot(A, v_new), np.dot(A.T, h_new)) /\n",
+    "                  np.dot(v_new, np.dot(A.T, h_new)))\n",
+    "\n",
+    "        v = v_new\n",
+    "        h = h_new\n",
+    "\n",
+    "    return ev_new, v_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scalar_product_stats(A, eigenvalue, eps=1e-6):\n",
+    "    \"\"\"Calculating number of iterations to reach given aposterior error.\n",
+    "    \n",
+    "    Args:\n",
+    "        A (ndarray<ndarray, ndarray>): matrix to handle.\n",
+    "        eigenvalue (float): true eigenvalue.\n",
+    "        eps (float): error to reach.\n",
+    "        \n",
+    "    Returns:\n",
+    "         k (int): number of iteraions to reach eps error.\n",
+    "         error (float): result aposterior error.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    k = 1\n",
+    "    \n",
+    "    eigenvalue_predicted, eigenvector_predicted = scalar_product(A, k)\n",
+    "    error = aposterior_error(A, eigenvalue, eigenvalue_predicted, eigenvector_predicted)\n",
+    "    \n",
+    "    while (error > eps):\n",
+    "        k  += 1\n",
+    "        \n",
+    "        eigenvalue_predicted, eigenvector_predicted = scalar_product(A, k)\n",
+    "        error = aposterior_error(A, eigenvalue, eigenvalue_predicted, eigenvector_predicted)\n",
+    "        \n",
+    "    return k, error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scalar product method test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dominant eigenvalue: \n",
+      "-1.2282101509657068\n",
+      "\n",
+      "Dominant eigenvector: \n",
+      "[ 0.70703327  0.01008139 -0.70710842]\n",
+      "\n",
+      "Number of iterations to reach given aposterior error: \n",
+      "24\n",
+      "\n",
+      "Result error: \n",
+      "5.779364027161092e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "eigenvalue = eig(A)[0][np.argmax(np.abs(eig(A)[0]))]\n",
+    "\n",
+    "k, error = scalar_product_stats(A, eigenvalue)\n",
+    "dominant_eigenvalue, dominant_eigenvector = scalar_product(A, k)\n",
     "\n",
     "print(\"\\nDominant eigenvalue: \\n{}\".format(dominant_eigenvalue))\n",
     "print(\"\\nDominant eigenvector: \\n{}\".format(dominant_eigenvector))\n",
