Added reverse spectrum bound finding to hw 10

--- a/EigenvalueEigenvector/EigenvalueEigenvector.ipynb
+++ b/EigenvalueEigenvector/EigenvalueEigenvector.ipynb
@@ -416,7 +416,6 @@
     "        h_new = np.dot(A.T, h) \n",
     "        h_new = h_new / norm(h_new)\n",
     "        \n",
-    "        \n",
     "        ev_new = (np.dot(np.dot(A, v_new), np.dot(A.T, h_new)) /\n",
     "                  np.dot(v_new, np.dot(A.T, h_new)))\n",
     "\n",
@@ -432,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scalar_product_stats(A, eigenvalue, eps=1e-6):\n",
+    "def scalar_product_stats(A, eigenvalue, eps=1e-3):\n",
     "    \"\"\"Calculating number of iterations to reach given aposterior error.\n",
     "    \n",
     "    Args:\n",
@@ -477,16 +476,16 @@
      "text": [
       "\n",
       "Dominant eigenvalue: \n",
-      "-1.2282101509657068\n",
+      "-1.2282103423557977\n",
       "\n",
       "Dominant eigenvector: \n",
-      "[ 0.70703327  0.01008139 -0.70710842]\n",
+      "[-0.70704531 -0.00958763  0.70710325]\n",
       "\n",
       "Number of iterations to reach given aposterior error: \n",
-      "24\n",
+      "15\n",
       "\n",
       "Result error: \n",
-      "5.779364027161092e-07\n"
+      "0.0008749133754015947\n"
      ]
     }
    ],
@@ -498,6 +497,117 @@
     "\n",
     "print(\"\\nDominant eigenvalue: \\n{}\".format(dominant_eigenvalue))\n",
     "print(\"\\nDominant eigenvector: \\n{}\".format(dominant_eigenvector))\n",
+    "print(\"\\nNumber of iterations to reach given aposterior error: \\n{}\".format(k))\n",
+    "print(\"\\nResult error: \\n{}\".format(error))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reverse spectrum bound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_spectrum_bound(A, eigenvalue, k):\n",
+    "    \"\"\"Reverse to eigenvalue spectrum bound.\n",
+    "    \n",
+    "    Args:\n",
+    "        A (ndarray<ndarray, ndarray>): matrix to handle.\n",
+    "        eigenvalue (float): eigenvalue to find reverse of.\n",
+    "        k (int): number of iteraions of power method.\n",
+    "        \n",
+    "    Returns:\n",
+    "        ev_reverse (float): reverse eigenvalue. \n",
+    "        v_reverse (ndarray<float>): reverse eigenvector. \n",
+    "    \"\"\"\n",
+    "    n = A.shape[0]\n",
+    "\n",
+    "    B = A - eigenvalue * np.identity(n)\n",
+    "    eigenvalue_b, v_reverse = power_iteration(B, k)\n",
+    "    ev_reverse = eigenvalue_b + eigenvalue\n",
+    "    \n",
+    "    return ev_reverse, v_reverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_spectrum_bound_stats(A, eigenvalue, eigenvalue_reversed, eps=1e-3):\n",
+    "    \"\"\"Calculating number of iterations to reach given aposterior error.\n",
+    "    \n",
+    "    Args:\n",
+    "        A (ndarray<ndarray, ndarray>): matrix to handle.\n",
+    "        eigenvalue (float): eigenvalue to find reverse of.\n",
+    "        eigenvalue_reversed (float): reversed eigenvalue.\n",
+    "        eps (float): error to reach.\n",
+    "        \n",
+    "    Returns:\n",
+    "         k (int): number of iteraions to reach eps error.\n",
+    "         error (float): result aposterior error.\n",
+    "    \"\"\"\n",
+    "    k = 1\n",
+    "    \n",
+    "    eigenvalue_predicted, eigenvector_predicted = reverse_spectrum_bound(A, eigenvalue, k)\n",
+    "    error = aposterior_error(A, eigenvalue_reversed, eigenvalue_predicted, eigenvector_predicted)\n",
+    "    \n",
+    "    while (error > eps):\n",
+    "        k  += 1\n",
+    "        \n",
+    "        eigenvalue_predicted, eigenvector_predicted = reverse_spectrum_bound(A, eigenvalue, k)\n",
+    "        error = aposterior_error(A, eigenvalue_reversed, eigenvalue_predicted, eigenvector_predicted)\n",
+    "        \n",
+    "    return k, error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reversed spectrum bound test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Reversed eigenvalue: \n",
+      "0.5444156902346884\n",
+      "\n",
+      "Reversed eigenvector: \n",
+      "[-1.37534045e-02  9.99905291e-01  5.03450345e-04]\n",
+      "\n",
+      "Number of iterations to reach given aposterior error: \n",
+      "10\n",
+      "\n",
+      "Result error: \n",
+      "0.0006713836265440595\n"
+     ]
+    }
+   ],
+   "source": [
+    "eigenvalue = eig(A)[0][np.argmax(np.abs(eig(A)[0]))]\n",
+    "eigenvalue_reversed = np.max(eig(A)[0]) if (eigenvalue <= 0) else np.min(eig(A)[0])\n",
+    "\n",
+    "k, error = reverse_spectrum_bound_stats(A, eigenvalue, eigenvalue_reversed)\n",
+    "ev_reversed, v_reversed = reverse_spectrum_bound(A, eigenvalue, k)\n",
+    "\n",
+    "print(\"\\nReversed eigenvalue: \\n{}\".format(ev_reversed))\n",
+    "print(\"\\nReversed eigenvector: \\n{}\".format(v_reversed))\n",
     "print(\"\\nNumber of iterations to reach given aposterior error: \\n{}\".format(k))\n",
     "print(\"\\nResult error: \\n{}\".format(error))"
    ]
