Added inverse to hw 10

--- a/EigenvalueEigenvector/EigenvalueEigenvector.ipynb
+++ b/EigenvalueEigenvector/EigenvalueEigenvector.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from numpy.linalg import eig, norm\n",
+    "from numpy.linalg import eig, norm, solve, inv\n",
     "\n",
     "import pandas as pd"
    ]
@@ -608,6 +608,105 @@
     "\n",
     "print(\"\\nReversed eigenvalue: \\n{}\".format(ev_reversed))\n",
     "print(\"\\nReversed eigenvector: \\n{}\".format(v_reversed))\n",
+    "print(\"\\nNumber of iterations to reach given aposterior error: \\n{}\".format(k))\n",
+    "print(\"\\nResult error: \\n{}\".format(error))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inverse iterations method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_iterations(A, eigenvalue=-1.2, eps=1e-3):\n",
+    "    \"\"\"Calculating dominant eigenvalue and eigenvector using reverese iterations method. \n",
+    "    \n",
+    "    Args:\n",
+    "        A (ndarray<ndarray, ndarray>): matrix to handle.\n",
+    "        eigenvalue (float): eigenvalue approximation.\n",
+    "        eps (float): error to reach.\n",
+    "        \n",
+    "    Returns:\n",
+    "        ev_new (float): dominant eigenvalue. \n",
+    "        v_new (ndarray<float>): dominant eigenvector. \n",
+    "        k (int): number of iteraions to reach eps error.\n",
+    "        error (float): result aposterior error.\n",
+    "    \"\"\"\n",
+    "    n = A.shape[0]\n",
+    "    k = 1\n",
+    "    \n",
+    "    v = np.ones(n) / np.sqrt(n)\n",
+    "    ev = eigenvalue\n",
+    "    \n",
+    "    error = 1\n",
+    "    \n",
+    "    while (error > eps):\n",
+    "        k  += 1\n",
+    "        \n",
+    "        W = A - ev * np.identity(n)\n",
+    "        v_new = solve(W, v)\n",
+    "        v_new = v_new / norm(v_new)\n",
+    "        mu, _ = scalar_product(inv(W), k)\n",
+    "        \n",
+    "        ev_new = (1 / mu) + ev\n",
+    "        \n",
+    "        error = np.abs(ev_new - ev)\n",
+    "        \n",
+    "        ev = ev_new\n",
+    "        v = v_new\n",
+    "        \n",
+    "    return ev_new, v_new, k, error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inverse iterations method test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Eigenvalue approximation: \n",
+      "-1.2\n",
+      "\n",
+      "Dominant eigenvalue: \n",
+      "-1.2282101509656234\n",
+      "\n",
+      "Dominant eigenvector: \n",
+      "[ 0.70717323  0.01011245 -0.706968  ]\n",
+      "\n",
+      "Number of iterations to reach given aposterior error: \n",
+      "3\n",
+      "\n",
+      "Result error: \n",
+      "3.270669485688771e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "eigenvalue = -1.2\n",
+    "dominant_eigenvalue, dominant_eigenvector, k, error = reverse_iterations(A, eigenvalue)\n",
+    "\n",
+    "print(\"\\nEigenvalue approximation: \\n{}\".format(eigenvalue))\n",
+    "print(\"\\nDominant eigenvalue: \\n{}\".format(dominant_eigenvalue))\n",
+    "print(\"\\nDominant eigenvector: \\n{}\".format(dominant_eigenvector))\n",
     "print(\"\\nNumber of iterations to reach given aposterior error: \\n{}\".format(k))\n",
     "print(\"\\nResult error: \\n{}\".format(error))"
    ]
