Changed function names in hw 10

--- a/EigenvalueEigenvector/EigenvalueEigenvector.ipynb
+++ b/EigenvalueEigenvector/EigenvalueEigenvector.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scalar_product_stats(A, eigenvalue, eps=1e-3):\n",
+    "def scalar_product_stats(A, eigenvalue, eps=1e-6):\n",
     "    \"\"\"Calculating number of iterations to reach given aposterior error.\n",
     "    \n",
     "    Args:\n",
@@ -476,16 +476,16 @@
      "text": [
       "\n",
       "Dominant eigenvalue: \n",
-      "-1.2282103423557977\n",
+      "-1.2282101509657068\n",
       "\n",
       "Dominant eigenvector: \n",
-      "[-0.70704531 -0.00958763  0.70710325]\n",
+      "[ 0.70703327  0.01008139 -0.70710842]\n",
       "\n",
       "Number of iterations to reach given aposterior error: \n",
-      "15\n",
+      "24\n",
       "\n",
       "Result error: \n",
-      "0.0008749133754015947\n"
+      "5.779364027161092e-07\n"
      ]
     }
    ],
@@ -622,12 +622,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reverse_iterations(A, eigenvalue=-1.2, eps=1e-3):\n",
-    "    \"\"\"Calculating dominant eigenvalue and eigenvector using reverese iterations method. \n",
+    "def inverse_iterations(A, eigenvalue=-1.2, eps=1e-3):\n",
+    "    \"\"\"Calculating dominant eigenvalue and eigenvector using inverese iterations method.\n",
     "    \n",
     "    Args:\n",
     "        A (ndarray<ndarray, ndarray>): matrix to handle.\n",
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
    ],
    "source": [
     "eigenvalue = -1.2\n",
-    "dominant_eigenvalue, dominant_eigenvector, k, error = reverse_iterations(A, eigenvalue)\n",
+    "dominant_eigenvalue, dominant_eigenvector, k, error = inverse_iterations(A, eigenvalue)\n",
     "\n",
     "print(\"\\nEigenvalue approximation: \\n{}\".format(eigenvalue))\n",
     "print(\"\\nDominant eigenvalue: \\n{}\".format(dominant_eigenvalue))\n",
